Agregar  logo REE encabezado

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="header-imgs-container">
             <span class="whatsapp-logo"></span>
-            <img class="logo-ree" src="../Practica/REF/Logo_REE_negro.png" alt="">
+            <img class="logo-ree" src="./recursos/imagenes/Logo_REE_negro.png" alt="">
             <span class="facebook-logo"></span>
         </div>
         <div class="menu-container">
