Centrar título encabezado

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <main>
         <section class="header-container">
             <h1>
-                <b>EXPERTOS EN</b>
-                AIRES ACONDICIONADOS
-                <b>VERACRUZ</b>                
+                <p>EXPERTOS EN</p>
+                <b>AIRES ACONDICIONADOS</b>
+                <p>VERACRUZ</p>                
             </h1>
             <p class="number-header">229 255 8610</p>
             <p class="eslogan">¡El profesionalismo y honestidad nos define!</p>
