Agregar recursos, definir estructura html y definir variables de colores en css

--- a/index.html
+++ b/index.html
@@ -35,6 +35,26 @@
             <p class="eslogan">¡El profesionalismo y honestidad nos define!</p>
             <button>Cotiza YA! <span></span></button>
         </section>
+        <section class="products-tipes--container">
+            <div class="products-tipe-refrigeration--container">
+                <span class="refrigeration-logo"></span>
+                <h2>Refrigeración</h2>
+                <button>Ver más <span></span></button>
+            </div>
+            <div class="products-tipe-electricity--container">
+                <span class="electricity-logo"></span>
+                <h2>Electricidad</h2>
+                <button>Ver más <span></span></button>
+            </div>
+            <div class="products-tipe-electronic--container">
+                <span class="electronic-logo"></span>
+                <h2>Electrónica</h2>
+                <button>Ver más <span></span></button>
+            </div>
+        </section>
+        <section></section>
+        <section></section>
     </main>
+    <footer></footer>
 </body>
 </html>
