Hacer sección tipos de servicio

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Open+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -31,9 +31,11 @@
                 <b>AIRES ACONDICIONADOS</b>
                 <p>VERACRUZ</p>                
             </h1>
-            <p class="number-header">229 255 8610</p>
-            <p class="eslogan">¡El profesionalismo y honestidad nos define!</p>
-            <button>Cotiza YA! <span></span></button>
+            <div class="header-title--container">
+                <p class="number-header">229 255 8610</p>
+                <p class="eslogan">¡El profesionalismo y honestidad nos define!</p>
+                <button>Cotiza YA! <span></span></button> 
+            </div>
         </section>
         <section class="products-tipes--container">
             <div class="products-tipe-refrigeration--container">
