Parte de las tarjetas

--- a/index.html
+++ b/index.html
@@ -54,7 +54,34 @@
                 <button>Ver más <span></span></button>
             </div>
         </section>
-        <section></section>
+        <section class="main-benefits--container">
+            <div class="benefits-title--container">
+                <h2>Un Trato Especial</h2>
+                <p>Seguimos tu preferencia y necesidades</p>
+            </div>
+            <section class="benefits-cards-container">
+                <article class="benefits-card money-benefit-card--container">
+                    <span></span>
+                    <h3></h3>
+                    <p></p>
+                </article>
+                <article class="benefits-card electricity-benefit-card--container">
+                    <span></span>
+                    <h3></h3>
+                    <p></p>
+                </article>
+                <article class="benefits-card time-benefit-card--container">
+                    <span></span>
+                    <h3></h3>
+                    <p></p>
+                </article>
+                <article class="benefits-card quality-benefit-card--container">
+                    <span></span>
+                    <h3></h3>
+                    <p></p>
+                </article>
+            </section>
+        </section>
         <section></section>
     </main>
     <footer></footer>
