Terminar sección de beneficios

--- a/index.html
+++ b/index.html
@@ -62,23 +62,38 @@
             <section class="benefits-cards-container">
                 <article class="benefits-card money-benefit-card--container">
                     <span></span>
-                    <h3></h3>
-                    <p></p>
+                    <h3>
+                        SERVICIOS Y PRODUCTOS
+                        ACCESIBLES
+                        </h3>
+                    <p>
+                        Comprendemos a tus finanzas, por ello nuestros productos y servicios llevan
+                        un costo accesible para toda la población.
+                    </p>
                 </article>
                 <article class="benefits-card electricity-benefit-card--container">
                     <span></span>
-                    <h3></h3>
-                    <p></p>
+                    <h3>SERVICIOS DE ELECTRICIDAD Y MUCHO MÁS...</h3>
+                    <p>
+                        En el hogar, los imprevistos abundan, nuestero grupo de expertos atienden problemas de múltiples
+                        áreas, desde la electricidad, refrigeración y electrónica.
+                    </p>
                 </article>
                 <article class="benefits-card time-benefit-card--container">
                     <span></span>
-                    <h3></h3>
-                    <p></p>
+                    <h3>TE AHORRAMOS TIEMPO</h3>
+                    <p>
+                        Evitamos el hacerte perder o retrasar tus actividades, laborando de manera eficaz en el
+                        menor tiempo posible y a un horario que se ajuste a ti.
+                    </p>
                 </article>
                 <article class="benefits-card quality-benefit-card--container">
                     <span></span>
-                    <h3></h3>
-                    <p></p>
+                    <h3>UN SERVICIO DE CALIDAD</h3>
+                    <p>
+                        Realizamos un análisis personalizado en cada servicio y caso que nos encontramos, encontrando
+                        soluciones efectivas con el mejor esfuerzo de nuestros expertos.
+                    </p>
                 </article>
             </section>
         </section>
