Hacer sección beneficios

--- a/index.html
+++ b/index.html
@@ -97,7 +97,23 @@
                 </article>
             </section>
         </section>
-        <section></section>
+        <section class="main-services--container">
+            <h2>Servicios Destacados</h2>
+            <section class="services-scroll--container">
+                <article class="service-card air-conditiner-service-container">
+                    <span></span>
+                    <p>Venta y reparación de aires acondicionados</p>
+                </article>
+                <article class="service-card dampers-service--container">
+                    <span></span>
+                    <p>Cambio de apagadores</p>
+                </article>
+                <article class="service-card fridge-service--container">
+                    <span></span>
+                    <p>Reparación de refrigeradores</p>
+                </article>
+            </section>
+        </section>
     </main>
     <footer></footer>
 </body>
